--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,6 @@
 	<div id="root">
 		Loading...
 	</div>
-
-	<script src="bundle.js"></script>
+	<script src="/bundle.js"></script>
 </body>
 </html>
